--- a/BusStop.Api/packages.config
+++ b/BusStop.Api/packages.config
@@ -5,6 +5,7 @@
   <package id="jQuery.UI.Combined" version="1.8.11" />
   <package id="jQuery.Validation" version="1.8.1" />
   <package id="knockoutjs" version="2.0.0" />
+  <package id="log4net" version="1.2.10" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20505.0" />
   <package id="Microsoft.AspNet.Providers" version="1.1" />
   <package id="Microsoft.AspNet.Providers.Core" version="1.0" />
@@ -21,5 +22,6 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
   <package id="Modernizr" version="2.0.6" />
   <package id="Newtonsoft.Json" version="4.5.1" />
+  <package id="NServiceBus" version="3.2.6" targetFramework="net40" />
   <package id="WebGrease" version="1.0.0" />
 </packages>
