--- a/BusStop.Api/Web.config
+++ b/BusStop.Api/Web.config
@@ -7,7 +7,16 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core"/>
   </configSections>
+
+
+  <UnicastBusConfig>
+    <MessageEndpointMappings>
+      <add Messages="BusStop.Contracts" Endpoint="backend"/>
+    </MessageEndpointMappings>
+  </UnicastBusConfig>
+  
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-BusStop.Api-20120806143912;Integrated Security=SSPI" />
   </connectionStrings>
