Configured the Api endpoint and making sure that we can send a message

--- a/BusStop.Api/Web.config
+++ b/BusStop.Api/Web.config
@@ -13,7 +13,7 @@
 
   <UnicastBusConfig>
     <MessageEndpointMappings>
-      <add Messages="BusStop.Contracts" Endpoint="backend"/>
+      <add Messages="BusStop.Contracts" Endpoint="BusStop.Backend"/>
     </MessageEndpointMappings>
   </UnicastBusConfig>
   
