Added the nservicebus.tools package

--- a/BusStop.Backend/app.config
+++ b/BusStop.Backend/app.config
@@ -2,6 +2,10 @@
 <configuration>
   <configSections>
     <section name="MessageForwardingInCaseOfFaultConfig" type="NServiceBus.Config.MessageForwardingInCaseOfFaultConfig, NServiceBus.Core" />
+    <section name="SecondLevelRetriesConfig" type="NServiceBus.Config.SecondLevelRetriesConfig, NServiceBus.Core" />
   </configSections>
+  
   <MessageForwardingInCaseOfFaultConfig ErrorQueue="error" />
+  
+  <SecondLevelRetriesConfig Enabled="true" TimeIncrease="00:00:05" NumberOfRetries="1"/>
 </configuration>
