--- a/BusStop.Backend/packages.config
+++ b/BusStop.Backend/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="log4net" version="1.2.10" />
+  <package id="Newtonsoft.Json" version="4.5.7" />
+  <package id="NLog" version="2.0.0.2000" />
   <package id="NServiceBus" version="3.2.7" />
   <package id="NServiceBus.Host" version="3.2.7" />
+  <package id="RavenDB.Client" version="1.0.972" />
 </packages>
