--- a/BusStop.Backend/BusStop.Backend.csproj
+++ b/BusStop.Backend/BusStop.Backend.csproj
@@ -70,6 +70,7 @@
     <Compile Include="EndpointConfig.cs" />
     <Compile Include="PlaceOrderHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RavenBootstrapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
