Refactored the setting of the access toekn to a message mutator

--- a/BusStop.Api/BusStop.Api.csproj
+++ b/BusStop.Api/BusStop.Api.csproj
@@ -132,6 +132,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Authentication\AccessTokenMutator.cs" />
     <Compile Include="Controllers\OrdersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
