--- a/BusStop.Backend/app.config
+++ b/BusStop.Backend/app.config
@@ -3,9 +3,12 @@
   <configSections>
     <section name="MessageForwardingInCaseOfFaultConfig" type="NServiceBus.Config.MessageForwardingInCaseOfFaultConfig, NServiceBus.Core" />
     <section name="SecondLevelRetriesConfig" type="NServiceBus.Config.SecondLevelRetriesConfig, NServiceBus.Core" />
+    <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core" />
   </configSections>
   
   <MessageForwardingInCaseOfFaultConfig ErrorQueue="error" />
+
+  <UnicastBusConfig ForwardReceivedMessagesTo="audit"/>
   
   <SecondLevelRetriesConfig Enabled="true" TimeIncrease="00:00:05" NumberOfRetries="1"/>
 </configuration>
