--- a/BusStop.Backend/app.config
+++ b/BusStop.Backend/app.config
@@ -8,7 +8,11 @@
   
   <MessageForwardingInCaseOfFaultConfig ErrorQueue="error" />
 
-  <UnicastBusConfig ForwardReceivedMessagesTo="audit"/>
+  <UnicastBusConfig ForwardReceivedMessagesTo="audit">
+    <MessageEndpointMappings>
+      <add Messages="BusStop.Billing.Contracts" Endpoint="BusStop.Billing.CreditCardGateway" />
+    </MessageEndpointMappings>
+  </UnicastBusConfig>
   
   <SecondLevelRetriesConfig Enabled="true" TimeIncrease="00:00:05" NumberOfRetries="1"/>
 </configuration>
