--- a/BusStop.Api/BusStop.Api.csproj
+++ b/BusStop.Api/BusStop.Api.csproj
@@ -230,9 +230,9 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BusStop.Contracts\BusStop.Contracts.csproj">
-      <Project>{54C28089-E771-45C0-BFCF-8AB78021AE99}</Project>
-      <Name>BusStop.Contracts</Name>
+    <ProjectReference Include="..\BusStop.Sales.InternalMessages\BusStop.Sales.InternalMessages.csproj">
+      <Project>{80A4FD7D-C5D6-4EAE-AC52-FACD5663DF4F}</Project>
+      <Name>BusStop.Sales.InternalMessages</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
