--- a/BusStop.Backend/BusStop.Backend.csproj
+++ b/BusStop.Backend/BusStop.Backend.csproj
@@ -67,10 +67,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CancelOrderHandler.cs" />
-    <Compile Include="CreditCardChargedHandler.cs" />
     <Compile Include="EndpointConfig.cs" />
-    <Compile Include="PlaceOrderHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RavenBootstrapper.cs" />
   </ItemGroup>
@@ -83,17 +80,13 @@
       <Project>{33102B4F-7504-4CAF-A0FF-908DD3445B6C}</Project>
       <Name>BusStop.Authentication</Name>
     </ProjectReference>
-    <ProjectReference Include="..\BusStop.Billing.Contracts\BusStop.Billing.Contracts.csproj">
-      <Project>{8995D69F-CB72-4286-B47A-3BE72FC073D2}</Project>
-      <Name>BusStop.Billing.Contracts</Name>
-    </ProjectReference>
     <ProjectReference Include="..\BusStop.Config\BusStop.Config.csproj">
       <Project>{67603B99-8753-43AA-A734-5756007AF5BB}</Project>
       <Name>BusStop.Config</Name>
     </ProjectReference>
-    <ProjectReference Include="..\BusStop.Contracts\BusStop.Contracts.csproj">
-      <Project>{54C28089-E771-45C0-BFCF-8AB78021AE99}</Project>
-      <Name>BusStop.Contracts</Name>
+    <ProjectReference Include="..\BusStop.Sales\BusStop.Sales.csproj">
+      <Project>{856BAB8F-026D-42EB-AEEB-E9DFF154B985}</Project>
+      <Name>BusStop.Sales</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
