Adjusted the message routing after the restructuring

--- a/BusStop.Api/Web.config
+++ b/BusStop.Api/Web.config
@@ -11,7 +11,7 @@
   </configSections>
   <UnicastBusConfig>
     <MessageEndpointMappings>
-      <add Messages="BusStop.Contracts" Endpoint="BusStop.Backend" />
+      <add Messages="BusStop.Sales.InternalMessages" Endpoint="BusStop.Backend" />
     </MessageEndpointMappings>
   </UnicastBusConfig>
   <connectionStrings>
