--- a/BusStop.Backend/BusStop.Backend.csproj
+++ b/BusStop.Backend/BusStop.Backend.csproj
@@ -84,6 +84,14 @@
       <Project>{67603B99-8753-43AA-A734-5756007AF5BB}</Project>
       <Name>BusStop.Config</Name>
     </ProjectReference>
+    <ProjectReference Include="..\BusStop.Sales.Contracts\BusStop.Sales.Contracts.csproj">
+      <Project>{AA5628F6-07FE-4035-A8E0-10D9DBFE51A7}</Project>
+      <Name>BusStop.Sales.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BusStop.Sales.InternalMessages\BusStop.Sales.InternalMessages.csproj">
+      <Project>{80A4FD7D-C5D6-4EAE-AC52-FACD5663DF4F}</Project>
+      <Name>BusStop.Sales.InternalMessages</Name>
+    </ProjectReference>
     <ProjectReference Include="..\BusStop.Sales\BusStop.Sales.csproj">
       <Project>{856BAB8F-026D-42EB-AEEB-E9DFF154B985}</Project>
       <Name>BusStop.Sales</Name>
