--- a/BusStop.Backend/app.config
+++ b/BusStop.Backend/app.config
@@ -8,11 +8,7 @@
   
   <MessageForwardingInCaseOfFaultConfig ErrorQueue="error" />
 
-  <UnicastBusConfig ForwardReceivedMessagesTo="audit">
-    <MessageEndpointMappings>
-      <add Messages="BusStop.Billing.Contracts" Endpoint="BusStop.Billing.CreditCardGateway" />
-    </MessageEndpointMappings>
-  </UnicastBusConfig>
+  <UnicastBusConfig ForwardReceivedMessagesTo="audit" />
   
   <SecondLevelRetriesConfig Enabled="true" TimeIncrease="00:00:05" NumberOfRetries="1"/>
 </configuration>
