--- a/BusStop.Billing/packages.config
+++ b/BusStop.Billing/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="log4net" version="1.2.10" targetFramework="net40" />
   <package id="NServiceBus" version="3.2.7" targetFramework="net40" />
+  <package id="NServiceBus.Host" version="3.2.7" targetFramework="net40" />
 </packages>
