Switched to unobtrusive mode for the events

--- a/BusStop.Config/BusStop.Config.csproj
+++ b/BusStop.Config/BusStop.Config.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ErrorQueueOveride.cs" />
+    <Compile Include="MyConvention.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
